<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#FFFFFF"
    android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	
   	<TextView android:id="@+id/new_method_heading"
	    android:text="@string/new_method"
	    style="@style/View_Heading" />

	<Spinner android:id="@+id/available_methods"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@id/new_method_heading"
        android:padding="10dp" />

 	<ScrollView android:id="@+id/label_scrollview"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:layout_above="@id/main_bottom_button_cluster"
	    android:layout_below="@id/available_methods"
	    android:padding="10dp">
   		
		<RelativeLayout android:id="@+id/mainsection" 
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content" >
		    
		    <TextView android:id="@+id/title_heading"
			    android:text="@string/method_name"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_alignParentLeft="true"
			    android:layout_alignParentTop="true"
			    android:textStyle="bold"
			    android:textAllCaps="true" />
		    
		    <EditText android:id="@+id/title"
			    android:inputType="text"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:layout_below="@id/title_heading"
			    android:layout_alignParentLeft="true"
			    style="@style/Input_Field" />
		    
		    <RelativeLayout android:id="@+id/eis_settings"
		        android:layout_width="match_parent"
		        android:padding="15dp"
			    android:layout_height="wrap_content"
			    android:layout_below="@id/title" >
		        
		        <TextView android:id="@+id/start_frequency_heading"
		            android:textColor="#88C"
		            android:layout_alignParentTop="true"
		            android:layout_alignParentLeft="true"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/eis_start_frequency" />
		        
		        <EditText android:id="@+id/start_frequency_value"
		            android:inputType="numberDecimal"
					android:digits="0123456789.,"
		            android:layout_alignParentTop="true"
		            android:layout_alignParentRight="true"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content" />
		        
		        <SeekBar android:id="@+id/start_frequency_slider"
		            android:layout_width="fill_parent"
		            android:layout_height="wrap_content"
		            android:layout_alignParentLeft="true"
		            android:layout_below="@id/start_frequency_heading"
		            android:layout_margin="10dp"
		            android:max="6"
		            android:progress="0" />
		        
		        <TextView android:id="@+id/end_frequency_heading"
		            android:textColor="#88C"
		            android:layout_below="@id/start_frequency_slider"
		            android:layout_alignParentLeft="true"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/eis_end_frequency" />
		        
		        <EditText android:id="@+id/end_frequency_value"
		            android:inputType="numberDecimal"
					android:digits="0123456789.,"
		            android:layout_below="@id/start_frequency_slider"
		            android:layout_alignParentRight="true"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"  />
		        
		        <SeekBar android:id="@+id/end_frequency_slider"
		            android:layout_width="fill_parent"
		            android:layout_height="wrap_content"
		            android:layout_alignParentLeft="true"
		            android:layout_below="@id/end_frequency_heading"
		            android:layout_margin="10dp"
		            android:max="6"
		            android:progress="6" />

				<TextView android:id="@+id/interval_frequency_heading"
					android:textColor="#88C"
					android:layout_below="@id/end_frequency_slider"
					android:layout_alignParentLeft="true"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/eis_interval_frequency" />

				<EditText android:id="@+id/interval_frequency_value"
					android:inputType="number"
					android:layout_below="@id/end_frequency_slider"
					android:layout_alignParentRight="true"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"  />

				<SeekBar android:id="@+id/interval_frequency_slider"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:layout_alignParentLeft="true"
					android:layout_below="@id/interval_frequency_heading"
					android:layout_margin="10dp"
					android:max="19"
					android:progress="9" />

				<TextView android:id="@+id/bias_voltage_heading"
					android:textColor="#88C"
					android:layout_below="@id/interval_frequency_slider"
					android:layout_alignParentLeft="true"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/eis_bias_voltage" />

				<EditText android:id="@+id/bias_voltage_value"
					android:inputType="number|numberDecimal|numberSigned"
					android:digits="0123456789.,-"
					android:layout_below="@id/interval_frequency_slider"
					android:layout_alignParentRight="true"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"  />

				<SeekBar android:id="@+id/bias_voltage_slider"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:layout_alignParentLeft="true"
					android:layout_below="@id/bias_voltage_heading"
					android:layout_margin="10dp"
					android:max="3000"
					android:progress="1500" />

				<TextView android:id="@+id/signal_amplitude_heading"
					android:textColor="#88C"
					android:layout_below="@id/bias_voltage_slider"
					android:layout_alignParentLeft="true"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/signal_amplitude" />

				<RadioGroup android:id="@+id/amplitude_setting"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_alignParentLeft="true"
					android:layout_below="@id/signal_amplitude_heading"
					android:textStyle="bold"
					android:orientation="horizontal" >

					<RadioButton android:id="@+id/amp3"
						android:text="@string/amplitude3"
						android:textColor="#88C"
						android:checked="true"
						android:onClick="onRadioButtonClicked"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content" />

					<RadioButton android:id="@+id/amp2"
						android:text="@string/amplitude2"
						android:textColor="#88C"
						android:checked="true"
						android:onClick="onRadioButtonClicked"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content" />

					<RadioButton android:id="@+id/amp1"
						android:text="@string/amplitude1"
						android:textColor="#88C"
						android:checked="true"
						android:onClick="onRadioButtonClicked"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content" />

					<RadioButton android:id="@+id/amp0"
						android:text="@string/amplitude0"
						android:textColor="#88C"
						android:checked="true"
						android:onClick="onRadioButtonClicked"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content" />

				</RadioGroup>
		        
		    </RelativeLayout>
		    
		    <RelativeLayout android:id="@+id/voltammetry_settings"
				android:layout_width="match_parent"
				android:padding="15dp"
				android:layout_height="wrap_content"
			    android:layout_below="@id/eis_settings" >

				<RelativeLayout android:id="@+id/voltage_range_settings"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_alignParentTop="true" >

					<TextView android:id="@+id/start_voltage_heading"
						android:textColor="#88C"
						android:layout_alignParentTop="true"
						android:layout_alignParentLeft="true"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/start_voltage" />

					<EditText android:id="@+id/start_voltage_value"
						android:inputType="number|numberDecimal|numberSigned"
						android:digits="0123456789.,-"
						android:layout_alignParentTop="true"
						android:layout_alignParentRight="true"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content" />

					<SeekBar android:id="@+id/start_voltage_slider"
						android:layout_width="fill_parent"
						android:layout_height="wrap_content"
						android:layout_alignParentLeft="true"
						android:layout_below="@id/start_voltage_heading"
						android:layout_margin="10dp"
						android:max="3000"
						android:progress="0" />

					<TextView android:id="@+id/end_voltage_heading"
						android:textColor="#88C"
						android:layout_below="@id/start_voltage_slider"
						android:layout_alignParentLeft="true"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/end_voltage" />

					<EditText android:id="@+id/end_voltage_value"
						android:inputType="number|numberDecimal|numberSigned"
						android:digits="0123456789.,-"
						android:layout_below="@id/start_voltage_slider"
						android:layout_alignParentRight="true"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"  />

					<SeekBar android:id="@+id/end_voltage_slider"
						android:layout_width="fill_parent"
						android:layout_height="wrap_content"
						android:layout_alignParentLeft="true"
						android:layout_below="@id/end_voltage_heading"
						android:layout_margin="10dp"
						android:max="3000"
						android:progress="3000" />

				</RelativeLayout>

				<RelativeLayout android:id="@+id/cv_settings"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_below="@id/voltage_range_settings" >

					<TextView android:id="@+id/scan_rate_heading"
						android:textColor="#88C"
						android:layout_alignParentTop="true"
						android:layout_alignParentLeft="true"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/scan_rate" />

					<EditText android:id="@+id/scan_rate_value"
						android:inputType="numberDecimal"
						android:digits="0123456789.,"
						android:layout_alignParentTop="true"
						android:layout_alignParentRight="true"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"  />

					<SeekBar android:id="@+id/scan_rate_slider"
						android:layout_width="fill_parent"
						android:layout_height="wrap_content"
						android:layout_alignParentLeft="true"
						android:layout_below="@id/scan_rate_heading"
						android:layout_margin="10dp"
						android:max="19"
						android:progress="9" />

				</RelativeLayout>

				<RelativeLayout android:id="@+id/dpv_settings"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_below="@id/cv_settings" >

					<TextView android:id="@+id/step_e_heading"
						android:textColor="#88C"
						android:layout_alignParentTop="true"
						android:layout_alignParentLeft="true"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/step_e" />

					<EditText android:id="@+id/step_e_value"
						android:inputType="number"
						android:layout_alignParentTop="true"
						android:layout_alignParentRight="true"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"  />

					<SeekBar android:id="@+id/step_e_slider"
						android:layout_width="fill_parent"
						android:layout_height="wrap_content"
						android:layout_alignParentLeft="true"
						android:layout_below="@id/step_e_heading"
						android:layout_margin="10dp"
						android:max="19"
						android:progress="1" />

					<TextView android:id="@+id/pulse_amp_heading"
						android:textColor="#88C"
						android:layout_below="@id/step_e_slider"
						android:layout_alignParentLeft="true"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/pulse_amplitude" />

					<EditText android:id="@+id/pulse_amp_value"
						android:inputType="number"
						android:layout_below="@id/step_e_slider"
						android:layout_alignParentRight="true"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"  />

					<SeekBar android:id="@+id/pulse_amp_slider"
						android:layout_width="fill_parent"
						android:layout_height="wrap_content"
						android:layout_alignParentLeft="true"
						android:layout_below="@id/pulse_amp_heading"
						android:layout_margin="10dp"
						android:max="49"
						android:progress="24" />

					<TextView android:id="@+id/step_frequency_heading"
						android:textColor="#88C"
						android:layout_below="@id/pulse_amp_slider"
						android:layout_alignParentLeft="true"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/step_frequency" />

					<EditText android:id="@+id/step_frequency_value"
						android:inputType="number"
						android:layout_below="@id/pulse_amp_slider"
						android:layout_alignParentRight="true"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"  />

					<SeekBar android:id="@+id/step_frequency_slider"
						android:layout_width="fill_parent"
						android:layout_height="wrap_content"
						android:layout_alignParentLeft="true"
						android:layout_below="@id/step_frequency_heading"
						android:layout_margin="10dp"
						android:max="49"
						android:progress="24" />

				</RelativeLayout>

				<CheckBox android:id="@+id/infinite_scans"
					android:layout_below="@id/dpv_settings"
					android:layout_alignParentRight="true"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:checked="true"
					android:textStyle="bold"
					android:textColor="#44A"
					android:textAllCaps="true"
					android:text="@string/infinite" />

                <TextView android:id="@+id/scan_number_heading"
                    android:textColor="#88C"
					android:layout_below="@id/dpv_settings"
                    android:layout_alignParentLeft="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/scan_number" />

				<EditText android:id="@+id/scan_number_value"
					android:inputType="number"
					android:layout_below="@id/infinite_scans"
					android:layout_alignParentRight="true"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"  />

				<SeekBar android:id="@+id/scan_number_slider"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:layout_alignParentLeft="true"
					android:layout_below="@id/scan_number_value"
					android:layout_margin="10dp"
					android:max="29"
					android:progress="0" />
		        
		    </RelativeLayout>

			<TextView android:id="@+id/electrode_config_heading"
				android:textColor="#88C"
				android:layout_alignParentLeft="true"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_below="@id/voltammetry_settings"
				android:text="@string/electrode_config" />

			<RadioGroup android:id="@+id/electrode_config"
				android:text="@string/electrode_config"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_alignParentLeft="true"
				android:layout_below="@id/electrode_config_heading"
				android:textStyle="bold"
				android:orientation="horizontal" >

				<RadioButton android:id="@+id/three_electrode_button"
					android:text="@string/three_electrode"
					android:textColor="#88C"
					android:checked="true"
					android:onClick="onRadioButtonClicked"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content" />

				<RadioButton android:id="@+id/two_electrode_button"
					android:text="@string/two_electrode"
					android:textColor="#88C"
					android:onClick="onRadioButtonClicked"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content" />

				<RadioButton android:id="@+id/open_circuit_button"
					android:text="@string/open_circuit"
					android:textColor="#88C"
					android:checked="true"
					android:onClick="onRadioButtonClicked"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content" />

			</RadioGroup>

			<TextView android:id="@+id/equilibrium_time_heading"
				android:textColor="#88C"
				android:layout_below="@id/electrode_config"
				android:layout_alignParentLeft="true"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/equilibrium_time" />

			<EditText android:id="@+id/equilibrium_time_value"
				android:inputType="number"
				android:layout_below="@id/electrode_config"
				android:layout_alignParentRight="true"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"  />

			<SeekBar android:id="@+id/equilibrium_time_slider"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_alignParentLeft="true"
				android:layout_below="@id/equilibrium_time_heading"
				android:layout_margin="10dp"
				android:max="60"
				android:progress="10" />

			
		</RelativeLayout>
		
	</ScrollView>
	
	<LinearLayout android:id="@+id/main_bottom_button_cluster"
        android:layout_alignParentBottom="true"
        style="@style/TabBar">
		
		<Button android:id="@+id/confirm" 
		    android:text="@string/confirm"
            android:layout_weight="1"
        	style="@style/TabBar_Items" />
    
    </LinearLayout>

</RelativeLayout>